--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      JetBrainsMono Nerd Font Mono
+font_family      FiraCode Nerd Font Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -77,7 +77,50 @@ font_size 16.0
 #: times. Syntax is::
 
 #:     symbol_map codepoints Font Family Name
+###########################################################
+# Symbols Nerd Font complete symbol_map
+# easily troubleshoot missing/incorrect characters with:
+#   kitty --debug-font-fallback
+###########################################################
 
+# "Nerd Fonts - Pomicons"
+symbol_map  U+E000-U+E00D Symbols Nerd Font
+
+# "Nerd Fonts - Powerline"
+symbol_map U+e0a0-U+e0a2,U+e0b0-U+e0b3 Symbols Nerd Font
+
+# "Nerd Fonts - Powerline Extra"
+symbol_map U+e0a3-U+e0a3,U+e0b4-U+e0c8,U+e0cc-U+e0d2,U+e0d4-U+e0d4 Symbols Nerd Font
+
+# "Nerd Fonts - Symbols original"
+symbol_map U+e5fa-U+e62b Symbols Nerd Font
+
+# "Nerd Fonts - Devicons"
+symbol_map U+e700-U+e7c5 Symbols Nerd Font
+
+# "Nerd Fonts - Font awesome"
+symbol_map U+f000-U+f2e0 Symbols Nerd Font
+
+# "Nerd Fonts - Font awesome extension"
+symbol_map U+e200-U+e2a9 Symbols Nerd Font
+
+# "Nerd Fonts - Octicons"
+symbol_map U+f400-U+f4a8,U+2665-U+2665,U+26A1-U+26A1,U+f27c-U+f27c Symbols Nerd Font
+
+# "Nerd Fonts - Font Linux"
+symbol_map U+F300-U+F313 Symbols Nerd Font
+
+#  Nerd Fonts - Font Power Symbols"
+symbol_map U+23fb-U+23fe,U+2b58-U+2b58 Symbols Nerd Font
+
+#  "Nerd Fonts - Material Design Icons"
+symbol_map U+f500-U+fd46 Symbols Nerd Font
+
+# "Nerd Fonts - Weather Icons"
+symbol_map U+e300-U+e3eb Symbols Nerd Font
+
+# Misc Code Point Fixes
+symbol_map U+21B5,U+25B8,U+2605,U+2630,U+2632,U+2714,U+E0A3,U+E615,U+E62B Symbols Nerd Font
 disable_ligatures never
 
 #: Choose how you want to handle multi-character ligatures. The
@@ -757,58 +800,53 @@ disable_ligatures never
 # Based on https://github.com/morhetz/gruvbox by morhetz <morhetz@gmail.com>
 # Adapted to kitty by wdomitrz <witekdomitrz@gmail.com>
 
-cursor                  #928374
-cursor_text_color       background
+# vim:ft=kitty
 
-url_color               #83a598
+## name: Kanagawa
+## license: MIT
+## author: Tommaso Laurenzi
+## upstream: https://github.com/rebelot/kanagawa.nvim/
 
-visual_bell_color       #8ec07c
-bell_border_color       #8ec07c
 
-active_border_color     #d3869b
-inactive_border_color   #665c54
+background #1F1F28
+foreground #DCD7BA
+selection_background #2D4F67
+selection_foreground #C8C093
+url_color #72A7BC
+cursor #C8C093
 
-background              #282828
-foreground              #fbf1c7
-selection_foreground    #928374
-selection_background    #ebdbb2
+# Tabs
+active_tab_background #1F1F28
+active_tab_foreground #C8C093
+inactive_tab_background  #1F1F28
+inactive_tab_foreground #727169
+#tab_bar_background #15161E
 
-active_tab_foreground   #fbf1c7
-active_tab_background   #665c54
-inactive_tab_foreground #a89984
-inactive_tab_background #3c3836
+# normal
+color0 #16161D
+color1 #C34043
+color2 #76946A
+color3 #C0A36E
+color4 #7E9CD8
+color5 #957FB8
+color6 #6A9589
+color7 #C8C093
 
-# black
-color0                  #282828
-color8                  #7c6f64
+# bright
+color8  #727169
+color9  #E82424
+color10 #98BB6C
+color11 #E6C384
+color12 #7FB4CA
+color13 #938AA9
+color14 #7AA89F
+color15 #DCD7BA
 
-# red
-color1                  #cc241d
-color9                  #fb4934
 
-#: green
-color2                  #98971a
-color10                 #b8bb26
+# extended colors
+color16 #FFA066
+color17 #FF5D62
 
-# yellow
-color3                  #d79921
-color11                 #fabd2f
-
-# blue
-color4                  #458588
-color12                 #83a598
-
-# purple
-color5                  #b16286
-color13                 #d3869b
-
-# aqua
-color6                  #689d6a
-color14                 #8ec07c
-
-# white
-color7                  #a89984
-color15                 #fbf1c7
 #: The color table {{{
 
 term xterm-256color
